Add custom id prefix via application.properties

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.data.mongodb.database=wizardsDB
 
 spring.data.mongodb.uri=${MONGO_URL}
 spring.mongodb.embedded.version=3.5.5
+
+pinaColada = coco
+custom.id.prefix = lieblingsCoctail
+
